# kinectjump

./: CMakeLists.txt
src/: KinectStatus.h  RaylibApp.cpp  RaylibApp.h  main.cpp  rl.h
src/game/: CameraEffects.cpp  CameraEffects.h  Character.cpp  Character.h  Game.cpp  Game.h  GameStates.h  HUD.cpp  HUD.h  KinectInstruction.cpp  KinectInstruction.h  ParallaxBackground.cpp  ParallaxBackground.h  PlatformEvent.h  PlatformManager.cpp  PlatformManager.h  ScoreSystem.cpp  ScoreSystem.h  SoundEffect.cpp  SoundEffect.h  SpriteEffect.cpp  SpriteEffect.h
src/gesture/: KinectGesture.cpp  KinectGesture.h
src/kinect/: DepthRenderer.cpp  DepthRenderer.h  kinect_device.cpp  kinect_device.hpp  kinect_frame_adapter.cpp  kinect_frame_adapter.hpp  kinect_types.hpp
src/tracking/: PersonTracker.cpp  PersonTracker.h
